@@ -53,15 +53,24 @@ sub TIEHASH {
     $self->{'_html_scrubber'} = new HTML::Scrubber;
 
     $self->scrubber->allow( split ' ', $cfg->{allow} )
-    if exists $cfg->{allow};
+      if exists $cfg->{allow};
+    
     $self->scrubber->deny( split ' ', $cfg->{deny} )
-    if exists $cfg->{deny};
+      if exists $cfg->{deny};
   };
 
-  for my $key ( $ctx->getInputValue ) {
-
-    #      $self->{$key} = $self->scrub( $ctx->getInputValue($key) );
-    $self->{'vars'}->{$key} = $self->scrub( $ctx->getInputValue($key) );
+  my @params = $ctx->getInputValue;
+  
+  for my $key (@params) {
+    my $value = $ctx->getInputValue($key);
+    if ( ref($value) && reftype($value) eq 'ARRAY') {
+      $value = [ map { $self->scrub($_) } @$value ];
+    }
+    else {
+      $value = $self->scrub($value);
+    }
+    
+    $self->{'vars'}->{$key} = $value;
   }
 
   $self;
