@@ -1717,7 +1717,7 @@ sub closeBLM {
   # session configuration, then map that to the session data...
   $prefs = $self->{config}->{default_prefs} if keys %{$prefs} == 0;
 
-  my $xml = Bedrock::XML::writeXMLString($prefs);
+  my $xml = Bedrock::XML::writeXMLString($prefs || {});
   &log_message( undef, "Saving session [" . $session . "] data\n$xml" )
     if $verbose > 1;
 
