@@ -1,3 +1,9 @@
+Sat Oct  9 14:26:08 2021  Rob Lauer  <rlauer6@comcast.net>
+
+	[BLM::Startup::Input]:
+	* src/main/perl/lib/BLM/Startup/Input.pm.in
+	(TIEHASH): scrub on arrays
+
 Mon Mar 22 11:46:31 2021  Rob Lauer  <rlauer6@comcast.net>
 
 	[buildspec]:
